--- a/index_ck.html
+++ b/index_ck.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CKEditor </title>
 
-    <script src="/ckeditor/build/ckeditor.js"></script>
+    <script src="./ckeditor/build/ckeditor.js"></script>
 
     <!-- bootstrap css -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
