게시판 목록 화면 작업_진행
작업 진행 중

--- a/board/lsit.html
+++ b/board/lsit.html
@@ -69,7 +69,7 @@
 
                                 <div class="p-1 bg-body-tertiary mb-4">
                                     
-                                    <h1 class="">Dashboard</h1>
+                                    <h1 class="">Board</h1>
 
                                     <!-- Breadcrumb -->
                                     <nav class="d-flex">
